# request-emulator

./: .env  .env.example  .env.prod  Dockerfile  Dockerfile.prod  README.md  aliases  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: app_ci.yml
app/: config.py  main.py  tasks.py
app/db/: db_setup.py  tasks.py  utils.py
app/models/: contacts.py  mixins.py
app/schemas/: contacts.py
backend/: alembic.ini  initial_db.py  main.py  run_db.py
backend/alembic/: env.py
backend/alembic/versions/: 321a28dfa3ac_init_db.py  6e3b3b554a6e_new_migration.py  7b3e4240cbb6_new_migration.py  84d868244fae_new_migration.py  8d21bd5e458e_updated_relationships.py  8deb6b8ef818_remove_column_from_user.py
backend/app/api/: api.py  dependencies.py  routes.py
backend/app/core/: config.py  exceptions.py  security.py
backend/app/crud/: author.py  book.py  order.py  role.py  user.py
backend/app/db/: base.py  db_setup.py  init_db.py  init_order.py  init_role.py  session.py
backend/app/models/: author.py  book.py  mixin.py  models.py  order.py  order_book.py  user.py
backend/app/schemas/: author.py  authors.py  book.py  books.py  order.py  order_book.py  role.py  user.py
backend/core/: config.py
backend/db/: session.py
backend/models/: models.py
backend/schemas/: books.py
backend/tests/: conftest.py  utils.py
backend/tests/test_routes/: test_author.py  test_book.py  test_user.py
scripts/: install-hooks.bash  pre-commit.bash  run-tests.bash  start_app.sh
tests/: conftest.py  test_actions.py
(+5 files in other folders)
