[tool.poetry]
name = "request-emulator"
version = "0.1.0"
description = ""
authors = ["Alex Dvornik <aadvornik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.88.0"}
pydantic = "^1.10.2"
SQLAlchemy = "^1.4.45"
alembic = "^1.9.1"
psycopg2-binary = "^2.9.5"
databases = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
