[tool.poetry]
name = "request_emulator"
version = "0.1.0"
description = "small API for learning"
authors = ["alDv0rnik <learn.bio@yandex.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "request_emulator"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.94.0"}
pydantic = "^1.10.6"
sqlalchemy = "^2.0.5.post1"
alembic = "^1.10.2"
psycopg2-binary = "^2.9.6"
uvicorn = "^0.21.1"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
redis = "^4.5.5"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = [
  ".", "backend"
]
